Fixing navigation breakpoint. - Removes floating nav to the right (too wide). - Show night BG only for > tablet-oversize.

--- a/source/stylesheets/partials/_header.sass
+++ b/source/stylesheets/partials/_header.sass
@@ -64,42 +64,7 @@ body
                 border-bottom: 3px solid $brand-2
 
 
-
-    +respond-to(tablet-portrait)
-      padding-top: 0em
-
-      h1
-        float: left
-
-      nav
-        float: right
-        margin: 0
-        padding: 0
-        border: none
-        +at-night
-          border: none
-
-        ul
-          li
-            margin: 0 0 0 2em
-
-
-    +respond-to(tablet-landscape)
+    +respond-to(tablet-oversize)
       background: white
       +at-night
         background: $black
-
-      h1
-        float: none
-
-      nav
-        float: none
-        border-top: 1px dotted $grey
-        +at-night
-          border-color: $brand-1
-        margin: 1em auto 0 auto
-        padding: 0.5em 1em 0
-
-        ul
-          li
-            margin: 0 1em
